# routes/productCategory.routes.js
@@ -5,5 +5,7 @@ module.exports = (app) => {
 
   router.get("/findAll", productCategory.findAll);
   router.post("/create", productCategory.create);
+  router.post("/update/:product_category_id", productCategory.update);
+  router.delete("/delete/:product_category_id", productCategory.delete);
   app.use("/api/productCategory", router);
 };
